Wed Nov  2 21:06:18 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * templates/wix.mpd:

          Added support for processing projects with custom_only set.

Wed Oct 19 19:11:50 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * config/openmp.mpb:

          Base project for openmp.

Mon Oct 17 18:33:05 UTC 2011  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:
        * docs/templates/make.txt:

          Define CFLAGS, but only if the 'cflags' template variable has been
          defined.

Thu Oct  6 12:40:46 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * docs/README:
        * docs/templates/automake.txt:
        * docs/templates/bmake.txt:
        * docs/templates/cc.txt:
        * docs/templates/cdt6cproject.txt:
        * docs/templates/cdt6project.txt:
        * docs/templates/common.txt:
        * docs/templates/ghs.txt:
        * docs/templates/make.net.txt:
        * docs/templates/make.txt:
        * docs/templates/rpmspec.txt:
        * docs/templates/vc10.txt:
        * docs/templates/vc7.txt:
        * docs/templates/vc7csharp.txt:
        * docs/templates/vc7java.txt:
        * docs/templates/vc7vb.txt:
        * docs/templates/vc8.txt:
        * docs/templates/vc8csharp.txt:
        * docs/templates/vc8java.txt:
        * docs/templates/vc8vb.txt:
        * docs/templates/wb26.txt:
        * docs/templates/wb26wrmakefile.txt:
        * docs/templates/wb26wrproject.txt:
        * docs/templates/wix.txt:
          Fuzz: added missing $Id $ string.

Thu Oct  6 12:27:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * modules/AutomakeProjectCreator.pm:
        * modules/AutomakeWorkspaceCreator.pm:
        * modules/BCB2007ProjectCreator.pm:
        * modules/BCB2007WorkspaceCreator.pm:
        * modules/BCB2009ProjectCreator.pm:
        * modules/BCB2009WorkspaceCreator.pm:
        * modules/BDS4ProjectCreator.pm:
        * modules/BDS4WorkspaceCreator.pm: