@@ -1502,10 +1502,11 @@
             passed to <em class="Code">mwc.pl</em> (see <a href=
             "MakeProjectCreator.html#Command%20Line%20Options" class=
             "XRef">Command Line Options</a>). However, the <em class=
-            "Code">-type</em>, <em class="Code">-recurse</em> , <em class=
-            "Code">-noreldefs</em> , <em class="Code">-make_coexistence</em>,
-            <em class="Code">-genins</em>, <em class="Code">-into</em> and
-            <em class="Code">-language</em> options as well as input files
+            "Code">-exclude</em>, <em class="Code">-for_eclipse</em>,
+            <em class="Code">-gendot</em>, <em class="Code">-gfeature_file</em>,
+            <em class="Code">-into</em>, <em class="Code">-make_coexistence</em>,
+            <em class="Code">-recurse</em>, <em class="Code">-reldefs</em>,
+            and <em class="Code">-type</em> options as well as input files
             are ignored. Environment variables may be accessed through
             <em class="Code">$NAME</em>, where <em class="Code">NAME</em> is
             the environment variable name. The <em class="Code">cmdline</em>
